# sandbox

./: .gitignore  .gitmodules  README.md  wsl.sh.txt
books/3D Math Primer for Graphics and Game Development/: CMakeLists.txt  Readme.md
books/3D Math Primer for Graphics and Game Development/include/autocheck/: arbitrary.hpp
books/3D Math Primer for Graphics and Game Development/src/: math.h
books/3D Math Primer for Graphics and Game Development/src/.vshistory/math.h/: 2020-02-27_15_58_33_427.h
books/3D Math Primer for Graphics and Game Development/src/generators/: mat4Rotation.py
books/3D Math Primer for Graphics and Game Development/tests/: main.cpp  properties.h
books/FundamentalsMatrixComputations/source/: CMakeLists.txt  build.ps1  cdb.out.txt  cdb.run.ps1  data.csv  debug.step.txt  debug.txt  la.cxx  math.algebra.linear.hpp  test.ps1
courses/columbia-cg-animation/week01/: .codio  CMakeLists.txt  run.py
courses/columbia-cg-animation/week01/FOSSSim/: CMakeLists.txt  ExplicitEuler.cpp  ExplicitEuler.h  Force.h  SceneStepper.h  SimpleGravityForce.cpp  SimpleGravityForce.h  TwoDScene.cpp  TwoDScene.h
courses/columbia-cg-animation/week01/cmake/: FindT1M1base.cmake
courses/columbia-cg-animation/week01/scripts/: compare  compile  output.txt  run
courses/columbia-cg-animation/week01/scripts/gdb/: 001.breakpoints.gdb  002.run.gdb
sources/: vs.ps1
sources/cpp/allocators/: Allocators.vcxproj  CMakeLists.txt  build.ps1  build.sh  main.cxx
sources/cpp/allocators/Allocators/: Allocators.sln  Allocators.vcxproj  main.cpp
sources/cpp/allocators/source/: allocators.h
sources/cpp/allocators/tests/: tests.cpp
sources/cpp/bitfield/: CMakeLists.txt  build  clean  conanfile.txt  cpphelper  ctest  generate  main.cxx  readme.md  run
sources/cpp/bitfield/builds/unix-gcc-x64-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  conanbuildinfo.cmake  conaninfo.txt
sources/cpp/cppnetwork/: CMakeLists.txt  readme.md
sources/cpp/cppnetwork/sources/: http_parser.cpp  main.cpp
sources/cpp/cppnetwork/sources/include/: http_parser.h
sources/cpp/func/: CMakeLists.txt  Readme.md  build.sh  events.h  func.h  main.cpp
sources/cpp/linear_algebra/: CMakeLists.txt  main.cpp
sources/cpp/lru/: CMakeLists.txt  main.cpp  readme.md
sources/cpp/vulkan/: CMakeLists.txt  main.cpp  vertex.description.js  vulkan.h  vulkan.ps1
sources/cpp/vulkan/models/: Boy01_Hair_GeoMesh  Boy01_Hair_GeoMesh.vulkan.h  Boy01_Hands_GeoMesh  Boy01_Hands_GeoMesh.index  Boy01_Head_GeoMesh  Boy01_Scarf_GeoMesh.index  Boy01_Scarf_GeoMesh.vulkan.h  Boy01_Shoes_GeoMesh  Boy01_Shoes_GeoMesh.vulkan.h  Boy01_UpperBody_GeoMesh  Boy01_UpperBody_GeoMesh.vulkan.h
sources/cpp/vulkan/shaders/: frag.glsl  vert.glsl  vert.h  vert.spv
sources/cpp/win32/: CMakeLists.txt  Readme.md  main.cpp
sources/euler/cpp/: CMakeLists.txt  runtests.ps1
sources/euler/cpp/sources/: euler.cpp  main.cpp
sources/game/vulkan/: CMakeLists.txt  cmake.ps1
sources/game/vulkan/src/: main.cpp  uniqueHandle.h  vulkan.debug.h  vulkan.h
sources/haskell/expressionbook/: expressionbook.cabal
sources/haskell/expressionbook/app/: Main.hs
sources/haskell/expressionbook/src/: Chapter01.hs
sources/haskell/expressionbook/test/: Spec.hs
sources/rust/actix/: Cargo.toml
sources/rust/actix/src/: main.rs
sources/rust/actix/src/db/: mod.rs
sources/rust/boids/boids-wasm/: Cargo.toml
sources/rust/boids/boids-wasm/src/: lib.rs
sources/rust/chat/: Cargo.toml  Readme.md  db.cql
sources/rust/chat-ws/: Cargo.toml
sources/rust/chat-ws/src/: main.rs
sources/rust/chat-ws/src/actors/: cql.rs  kafka.rs  mod.rs  websocket.rs
sources/rust/chat-ws/src/app/: ws_handler.rs
sources/rust/chat/src/: main.rs
sources/rust/chat/src/http_context/: mod.rs
sources/rust/columnar-db/: Cargo.toml  Readme.md  dbarchitecture.drawio
sources/rust/columnar-db/cli/: Cargo.toml
sources/rust/columnar-db/cli/src/: main.rs
sources/rust/columnar-db/db/: Cargo.toml
sources/rust/columnar-db/db/src/: channel.rs  computegraph.rs  computegraphdefinition.rs  datacatalog.rs  filemanager.rs  lib.rs  threadpool.rs
sources/rust/columnar-db/src/: channels.rs  folds.rs  main.rs
sources/rust/columnar-db/src/catalog/: mod.rs
sources/rust/columnar-db/src/db/: computegrafdef.rs  computegraph.rs  mod.rs
sources/rust/columnar-db/src/io/: mod.rs  tempfile.rs
sources/rust/columnar-db/testlib/: Cargo.toml
sources/rust/columnar-db/testlib/src/: lib.rs
sources/rust/columnar-db/vold/: Readme.md
sources/rust/columnar-db/vold/cli/: Cargo.toml
sources/rust/epoll/: Cargo.toml  profile.ab.sh  profile.mem.sh
sources/rust/epoll/src/: main.rs
sources/rust/font/: Cargo.toml  Readme.md  index.html  index.js  package.json  run.txt  sdf.glsl
sources/rust/font/src/: main.rs
sources/rust/merkle-tree/: Cargo.toml  Readme.md
sources/rust/merkle-tree/benches/: merkle_tree_builder.rs
sources/rust/merkle-tree/src/: lib.rs  main.rs  merkle.rs  utils.rs
sources/rust/onnx/: Cargo.toml
sources/rust/onnx/src/: main.rs
sources/rust/openssl/: Cargo.toml  certificate.pem  clientcertificate.pem  clientkey.pem  gencert.sh  key.pem
sources/rust/openssl/src/: main.rs  server.rs
sources/rust/rcu-test/: Cargo.toml  Readme.md  test
sources/rust/rcu-test/src/: lib.rs
sources/rust/relm/app/: Cargo.toml
sources/rust/sqldb/: Cargo.toml  Readme.md  history.txt
sources/rust/sqldb/src/: main.rs
sources/rust/telltaled3dmesh/: .print  Cargo.toml  CompressedKeys.asm  Readme.md  a.txt  all.createfilea.js  all_readfile_of.js  anmdiasm.txt  b.txt  build.ps1  compressed.diasm.c  debug.ps1  disasm.txt  export_all_animations.ps1  extractcompressedkeys.ps1  justfile  sk20_guybrush.skl.txt  sk20_guybrush_pickuplow.txt  sk20_move_guybrushwalk.txt  telltale_header_CRCs_final_v1.txt  working.ps1  working.txt  x64cheatsheet.txt
sources/rust/telltaled3dmesh/src/: attributes.rs  d3dfile.rs  d3dmesh.rs  gltf.rs  indexbuffer.rs  main.rs  parser.rs  run.rs
sources/rust/telltaled3dmesh/viewer/: index.html
sources/rust/win32/: Cargo.toml
sources/rust/win32/src/: main.rs
(+3711 files in other folders)
