[package]
name = "chat-ws"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.23.1", features = ["cmake-build"] }
hostname = "0.3.1"
structopt = "0.3"
log = "0.4"
pretty_env_logger = "0.4.0"
env_logger = "0.4.0"
tokio = { version = "0.2.21", features = ["full"] }
tokio-tungstenite = "0.10.0"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
serde = { version = "1.0.100", default-features = false }
serde_json = "1.0.55"
jwt = "0.7.0"
hmac = "0.7"
sha2 = "0.8"
cdrs = "2.3.3"
cdrs_helpers_derive = "0.3.3"
anyhow = "1.0.31"
thiserror = "1.0.19"