[package]
name = "chat"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.8.1"
mio = {version = "0.7.0", features = ["os-poll","tcp"]}
simple-error = "0.2.1"
http_parser = "0.0.2"
strings = "0.1.1"
