[package]
name = "columnar-db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.9.0", features = ["full"]}
async-stream = "0.3.2"
flume = "0.10.8"
futures-core = "0.3.16"
futures-util = "0.3.16"
extension-trait = "1.0.0"
rand = "0.8.4"
arrow = "5.1.0"