[package]
name = "epoll"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
derive_builder = "0.9.0"
log = { version = "0.4.11", features = ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0.4.0"
crossbeam = "0.7.3"