[package]
name = "merkle-tree"
version = "0.1.0"
edition = "2018"


[dependencies]
tokio = {version="1.13.1", features = ["full"]}
flume = "0.10.8"
sha2 = "0.9.5"
extension-trait = "1.0.0"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async", "async_tokio"]}

[[bench]]
name = "merkle_tree_builder"
harness = false