[package]
name = "onnx"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnx-pb = "0.1.4"
voca_rs = "1.10.1"
tensor-rs = {path = "../../../../auto-diff/tensor-rs/"}
derive_builder = "0.9.0"
log="*"
pretty_env_logger="*"
tch = "0.1.7"
bytes = "0.5.5"