[package]
name = "rcu-test"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
pretty_env_logger = "*"

[target.'cfg(loom)'.dependencies]
loom = { path = "../../../../loom/" }
