[package]
name = "sqldb"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.5.0"
rustyline = "6.2.0"
byteorder = "1.3.4"
arrayref = "0.3.6"
