[package]
name = "telltaled3dmesh"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3.23"
nom = "7.0.0"
obj-exporter = "0.2.0"
flate2 = "1.0.21"
compress = "0.2.1"
json = "*"
base64 = "0.13.0"
lz-fear = "0.1.1"
nintendo-lz = "0.1.3"
bitpacking = "0.8.4"
inflate = "0.4.5"
rust-crypto = "0.2.36"
debug-here = "0.2.2"
p-macro = "0.2.0"
prettydiff = "0.5.1"
iced-x86 = "1.14.0"
rust-lapper = "1.0.0"
