[package]
name = "telltaled3dmesh"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3.23"
nom = "7.0.0"
json = "*"
base64 = "0.13.0"
iced-x86 = "1.14.0"
rust-lapper = "1.0.0"
progress = "0.2.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
itertools = "0.10.1"
crc64 = "1.0.0"
tablestream = "0.1.3"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
