[package]
name = "win32"
version = "0.1.0"
authors = ["Daniel Frederico Lins Leite <xunilrj@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi"] }