[package]
name = "boids-wasm"
version = "0.1.0"
authors = ["Daniel Leite <1985.daniel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6" }
wee_alloc = { version = "0.4.5", optional = true }
log = "0.4.8"
tiny_ecs = "0.19.4"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.40"
features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
